syntax = "proto3";

package permission.service.v1;

import "gnostic/openapi/v3/annotations.proto";

import "google/api/annotations.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

import "pagination/v1/pagination.proto";

// Permission Management Service
service PermissionService {
  // List permissions
  rpc List (pagination.PagingRequest) returns (ListPermissionResponse) {}

  // Get permission details
  rpc Get (GetPermissionRequest) returns (Permission) {}

  // Create permission
  rpc Create (CreatePermissionRequest) returns (google.protobuf.Empty) {}

  // Update permission
  rpc Update (UpdatePermissionRequest) returns (google.protobuf.Empty) {}

  // Delete permission
  rpc Delete (DeletePermissionRequest) returns (google.protobuf.Empty) {}

  // Sync permissions
  rpc SyncPermissions (google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

// Data permission scope
enum DataScope {
  DATA_SCOPE_UNSPECIFIED = 0;

  ALL = 1;              // All data: can access cross-tenant or all units within tenant (depends on tenant_id)
  SELF = 2;             // Self only: can only see data where owner_id equals self

  UNIT_ONLY = 3;        // Current OrgUnit only: excluding child nodes
  UNIT_AND_CHILD = 4;   // Current OrgUnit and all recursive child nodes

  SELECTED_UNITS = 5;   // Custom organization unit list
}

// Permission
message Permission {
  // Permission status
  enum Status {
    OFF = 0;         // Disabled
    ON = 1;          // Enabled
  }

  optional uint32 id = 1 [
    json_name = "id",
    (gnostic.openapi.v3.property) = { description: "Permission ID" }
  ]; // Permission ID

  optional string name = 2 [
    json_name = "name",
    (gnostic.openapi.v3.property) = { description: "Permission name (e.g., Delete User)" }
  ]; // Permission name (e.g., Delete User)

  optional string code = 3 [
    json_name = "code",
    (gnostic.openapi.v3.property) = { description: "Permission unique code (e.g., user.delete)" }
  ]; // Permission unique code (e.g., user.delete)

  optional string description = 4 [
    json_name = "description",
    (gnostic.openapi.v3.property) = { description: "Description" }
  ]; // Description

  optional Status status = 5 [(gnostic.openapi.v3.property) = {description: "Status"}]; // Status

  optional uint32 group_id = 6 [
    json_name = "groupId",
    (gnostic.openapi.v3.property) = {description: "Group ID"}
  ];  // Group ID

  optional string group_name = 7 [
    json_name = "groupName",
    (gnostic.openapi.v3.property) = {description: "Group name"}
  ];  // Group name

  repeated uint32 menu_ids = 10 [
    json_name = "menuIds",
    (gnostic.openapi.v3.property) = {description: "Associated menu IDs"}
  ]; // Associated menu IDs

  repeated uint32 api_ids = 11 [
    json_name = "apiIds",
    (gnostic.openapi.v3.property) = {description: "Associated API resource IDs"}
  ]; // Associated API resource IDs

  optional uint32 created_by = 100 [json_name = "createdBy", (gnostic.openapi.v3.property) = {description: "Creator ID"}]; // Creator ID
  optional uint32 updated_by = 101 [json_name = "updatedBy", (gnostic.openapi.v3.property) = {description: "Updater ID"}]; // Updater ID
  optional uint32 deleted_by = 102 [json_name = "deletedBy", (gnostic.openapi.v3.property) = {description: "Deleter user ID"}]; // Deleter user ID

  optional google.protobuf.Timestamp created_at = 200 [json_name = "createdAt", (gnostic.openapi.v3.property) = {description: "Created time"}];// Created time
  optional google.protobuf.Timestamp updated_at = 201 [json_name = "updatedAt", (gnostic.openapi.v3.property) = {description: "Updated time"}];// Updated time
  optional google.protobuf.Timestamp deleted_at = 202 [json_name = "deletedAt", (gnostic.openapi.v3.property) = {description: "Deleted time"}];// Deleted time
}

// List response
message ListPermissionResponse {
  repeated Permission items = 1;
  uint64 total = 2;
}

// Get request
message GetPermissionRequest {
  oneof query_by {
    uint32 id = 1 [
      (gnostic.openapi.v3.property) = {description: "ID", read_only: true},
      json_name = "id"
    ]; // ID

    string code = 2 [
      (gnostic.openapi.v3.property) = {description: "Permission code", read_only: true},
      json_name = "code"
    ]; // Permission code
  }

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "View field mask for controlling returned fields"
    }
  ]; // View field mask for controlling returned fields
}

// Create request
message CreatePermissionRequest {
  Permission data = 1;
}

// Update request
message UpdatePermissionRequest {
  uint32 id = 1;

  Permission data = 2;

  google.protobuf.FieldMask update_mask = 3 [
    (gnostic.openapi.v3.property) = {
      description: "List of fields to update",
      example: {yaml : "id,realname,username"}
    },
    json_name = "updateMask"
  ]; // List of fields to update

  optional bool allow_missing = 4 [
    (gnostic.openapi.v3.property) = {description: "If set to true and the resource does not exist, it will be created (inserted), and the `updateMask` field will be ignored in this case."},
    json_name = "allowMissing"
  ]; // If set to true and the resource does not exist, it will be created (inserted), and the `updateMask` field will be ignored in this case.
}

// Delete request
message DeletePermissionRequest {
  oneof delete_by {
    uint32 id = 1 [
      (gnostic.openapi.v3.property) = {description: "ID", read_only: true},
      json_name = "id"
    ]; // ID

    string code = 2 [
      (gnostic.openapi.v3.property) = {description: "Permission code", read_only: true},
      json_name = "code"
    ]; // Permission code

    uint32 group_id = 3 [
      (gnostic.openapi.v3.property) = {description: "Permission group", read_only: true},
      json_name = "groupId"
    ]; // Permission group
  }
}
