syntax = "proto3";

package user.service.v1;

import "gnostic/openapi/v3/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "google/api/field_behavior.proto";
import "redact/v3/redact.proto";

import "pagination/v1/pagination.proto";

// User service
service UserService {
  // List users
  rpc List (pagination.PagingRequest) returns (ListUserResponse) {}

  // Get user details
  rpc Get (GetUserRequest) returns (User) {}

  // Create user
  rpc Create (CreateUserRequest) returns (google.protobuf.Empty) {}

  // Update user
  rpc Update (UpdateUserRequest) returns (google.protobuf.Empty) {}

  // Delete user
  rpc Delete (DeleteUserRequest) returns (google.protobuf.Empty) {}

  // Batch create users
  rpc BatchCreate (BatchCreateUsersRequest) returns (BatchCreateUsersResponse) {}

  // Check if user exists
  rpc UserExists (UserExistsRequest) returns (UserExistsResponse) {}
}

// User
message User {
  // User gender
  enum Gender {
    SECRET = 0;  // Unknown/Secret
    MALE = 1;     // Male
    FEMALE = 2;   // Female
  }

  // User status
  enum Status {
    DISABLED = 0; // Disabled (Manually disabled by administrator. User cannot log in.)
    NORMAL = 1;  // Normal (User can log in and use the system normally.)
    PENDING = 2; // Pending activation (Account created but not yet verified via email/SMS or activated by HR.)
    LOCKED = 3;  // Locked (Automatically locked by system due to security policy, e.g., too many failed password attempts.)
    EXPIRED = 4; // Expired (Account exceeded the validity period, commonly used for temporary workers or external consultants.)
    CLOSED = 9; // Closed (User voluntarily closed the account. Usually a soft-delete state after data anonymization.)
  }

  optional uint32 id = 1 [
    json_name = "id",
    (gnostic.openapi.v3.property) = {description: "User ID"}
  ];  // User ID

  optional uint32 tenant_id = 2 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = {description: "Tenant ID"}
  ];  // Tenant ID
  optional string tenant_name = 3 [
    json_name = "tenantName",
    (gnostic.openapi.v3.property) = {description: "Tenant name"}
  ];  // Tenant name

  optional uint32 org_unit_id = 4 [
    json_name = "orgUnitId",
    (gnostic.openapi.v3.property) = {description: "Organization unit ID"}
  ]; // Organization unit ID
  repeated uint32 org_unit_ids = 5 [
    json_name = "orgUnitIds",
    (gnostic.openapi.v3.property) = {description: "List of organization unit IDs"}
  ]; // List of organization unit IDs
  optional string org_unit_name = 6 [
    json_name = "orgUnitName",
    (gnostic.openapi.v3.property) = {description: "Organization unit name"}
  ]; // Organization unit name
  repeated string org_unit_names = 7 [
    json_name = "orgUnitNames",
    (gnostic.openapi.v3.property) = {description: "List of organization unit names"}
  ]; // List of organization unit names

  optional uint32 position_id = 8 [
    json_name = "positionId",
    (gnostic.openapi.v3.property) = {description: "Position ID"}
  ];  // Position ID
  repeated uint32 position_ids = 9 [
    json_name = "positionIds",
    (gnostic.openapi.v3.property) = {description: "List of position IDs"}
  ]; // List of position IDs
  optional string position_name = 10 [
    json_name = "positionName",
    (gnostic.openapi.v3.property) = {description: "Position name"}
  ];  // Position name
  repeated string position_names = 11 [
    json_name = "positionNames",
    (gnostic.openapi.v3.property) = {description: "List of position names"}
  ];  // List of position names

  optional uint32 role_id = 12 [
    json_name = "roleId",
    (gnostic.openapi.v3.property) = {description: "Role ID"}
  ];  // Role ID
  repeated uint32 role_ids = 13 [
    json_name = "roleIds",
    (gnostic.openapi.v3.property) = {description: "List of role IDs"}
  ];  // List of role IDs
  repeated string roles = 14 [
    (gnostic.openapi.v3.property) = {description: "List of role codes"}
  ]; // List of role codes
  repeated string role_names = 15 [
    json_name = "roleNames",
    (gnostic.openapi.v3.property) = { description: "List of role names"}
  ]; // List of role names

  optional string username = 20 [
    json_name = "username",
    (gnostic.openapi.v3.property) = {description: "Username"}
  ]; // Username

  optional string nickname = 21 [
    json_name = "nickname",
    (gnostic.openapi.v3.property) = {description: "Nickname"}
  ]; // Nickname

  optional string realname = 22 [
    json_name = "realname",
    (gnostic.openapi.v3.property) = {description: "Real name"}
  ]; // Real name

  optional string avatar = 23 [
    json_name = "avatar",
    (gnostic.openapi.v3.property) = {description: "Avatar"}
  ]; // Avatar

  optional string email = 24 [
    (redact.v3.value).string = "r*d@ct*d",
    json_name = "email",
    (gnostic.openapi.v3.property) = {description: "Email"}
  ]; // Email

  optional string mobile = 25 [
    json_name = "mobile",
    (gnostic.openapi.v3.property) = {description: "Mobile phone number"}
  ]; // Mobile phone number

  optional string telephone = 26 [
    json_name = "telephone",
    (gnostic.openapi.v3.property) = {description: "Landline number"}
  ]; // Landline number

  optional Gender gender = 27 [
    json_name = "gender",
    (gnostic.openapi.v3.property) = {description: "Gender"}
  ]; // Gender

  optional string address = 28 [
    json_name = "address",
    (gnostic.openapi.v3.property) = {description: "Address"}
  ]; // Address

  optional string region = 29 [
    json_name = "region",
    (gnostic.openapi.v3.property) = {description: "Country/Region"}
  ]; // Country/Region

  optional string description = 30 [
    json_name = "description",
    (gnostic.openapi.v3.property) = {description: "Personal description"}
  ]; // Personal description

  optional string remark = 31 [
    json_name = "remark",
    (gnostic.openapi.v3.property) = {description: "Remark"}
  ]; // Remark

  optional google.protobuf.Timestamp last_login_at = 50 [
    json_name = "lastLoginAt",
    (gnostic.openapi.v3.property) = {description: "Last login time"}
  ]; // Last login time

  optional string last_login_ip = 51 [
    json_name = "lastLoginIp",
    (gnostic.openapi.v3.property) = {description: "Last login IP"}
  ]; // Last login IP

  optional Status status = 52 [
    json_name = "status",
    (gnostic.openapi.v3.property) = {description: "Status"}
  ]; // Status

  optional google.protobuf.Timestamp locked_until = 53 [
    json_name = "lockedUntil",
    (gnostic.openapi.v3.property) = {description: "Locked until time"}
  ];// Locked until time

  optional uint32 created_by = 100 [json_name = "createdBy", (gnostic.openapi.v3.property) = {description: "Creator ID"}]; // Creator ID
  optional uint32 updated_by = 101 [json_name = "updatedBy", (gnostic.openapi.v3.property) = {description: "Updater ID"}]; // Updater ID
  optional uint32 deleted_by = 102 [json_name = "deletedBy", (gnostic.openapi.v3.property) = {description: "Deleter user ID"}]; // Deleter user ID

  optional google.protobuf.Timestamp created_at = 200 [json_name = "createdAt", (gnostic.openapi.v3.property) = {description: "Created time"}];// Created time
  optional google.protobuf.Timestamp updated_at = 201 [json_name = "updatedAt", (gnostic.openapi.v3.property) = {description: "Updated time"}];// Updated time
  optional google.protobuf.Timestamp deleted_at = 202 [json_name = "deletedAt", (gnostic.openapi.v3.property) = {description: "Deleted time"}];// Deleted time
}

// List users - Response
message ListUserResponse {
  repeated User items = 1;
  uint64 total = 2;
}

// Get user data - Request
message GetUserRequest {
  oneof query_by {
    uint32 id = 1 [
      (gnostic.openapi.v3.property) = {description: "User ID", read_only: true},
      json_name = "id"
    ]; // User ID

    string username = 2 [
      (gnostic.openapi.v3.property) = {description: "Username", read_only: true},
      json_name = "username"
    ]; // Username
  }

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "Field mask for controlling returned fields"
    }
  ]; // Field mask for controlling returned fields
}

// Create user - Request
message CreateUserRequest {
  User data = 1;

  optional string password = 2 [
    (gnostic.openapi.v3.property) = {description: "User login password", read_only: true},
    json_name = "password"
  ]; // User login password
}

// Update user - Request
message UpdateUserRequest {
  uint32 id = 1;

  User data = 2 [
    json_name = "data",
    (google.api.field_behavior) = REQUIRED,
    (gnostic.openapi.v3.property) = {description: "User data"}
  ]; // User data

  optional string password = 3 [
    (gnostic.openapi.v3.property) = {description: "User login password", read_only: true},
    json_name = "password"
  ]; // User login password

  google.protobuf.FieldMask update_mask = 4 [
    json_name = "updateMask",
    (gnostic.openapi.v3.property) = {
      description: "List of fields to update",
      example: {yaml : "id,realname,username"}
    }
  ]; // List of fields to update

  optional bool allow_missing = 5 [
    json_name = "allowMissing",
    (gnostic.openapi.v3.property) = {description: "If set to true, the resource will be created (inserted) if it does not exist, and the updateMask field will be ignored in this case."}
  ]; // If set to true, the resource will be created (inserted) if it does not exist, and the updateMask field will be ignored in this case.
}

// Delete user - Request
message DeleteUserRequest {
  oneof delete_by {
    uint32 id = 1 [
      (gnostic.openapi.v3.property) = {description: "User ID", read_only: true},
      json_name = "id"
    ]; // User ID

    string username = 2 [
      (gnostic.openapi.v3.property) = {description: "Username", read_only: true},
      json_name = "username"
    ]; // Username
  }
}

// Check if user exists - Request
message UserExistsRequest {
  oneof query_by {
    uint32 id = 1 [
      (gnostic.openapi.v3.property) = {description: "User ID", read_only: true},
      json_name = "id"
    ]; // User ID

    string username = 2 [
      (gnostic.openapi.v3.property) = {description: "Username", read_only: true},
      json_name = "username"
    ]; // Username
  }
}
// Check if user exists - Response
message UserExistsResponse {
  bool exist = 1;
}

message BatchCreateUsersRequest {
  repeated User data = 1;
}
message BatchCreateUsersResponse {
  repeated int32 created_ids = 1 [
    json_name = "createdIds",
    (gnostic.openapi.v3.property) = {
      description: "List of successfully created user IDs"
    }
  ]; // List of successfully created user IDs
}

message GetUsersByIdsRequest {
  repeated uint32 ids = 1;
}

// Force edit user password (no verification required) - Request
message EditUserPasswordRequest {
  uint32 user_id = 1 [
    json_name = "userId",
    (gnostic.openapi.v3.property) = {
      description: "User ID"
    }
  ]; // User ID

  string new_password = 2 [
    json_name = "newPassword",
    (gnostic.openapi.v3.property) = {
      description: "New password"
    }
  ]; // New password
}


// Change user password (requires old password verification) - Request
message ChangePasswordRequest {
  string old_password = 1 [
    json_name = "oldPassword",
    (gnostic.openapi.v3.property) = {
      description: "Old password"
    }
  ]; // Old password

  string new_password = 2 [
    json_name = "newPassword",
    (gnostic.openapi.v3.property) = {
      description: "New password"
    }
  ]; // New password
}

message UploadAvatarRequest {
  oneof source {
    string image_base64 = 1;
    string image_url = 2;
  }
}
message UploadAvatarResponse {
  string url = 1;
}

message BindContactRequest {
  oneof contact {
    BindPhoneRequest phone = 1;
    BindEmailRequest email = 2;
  }
}
message BindPhoneRequest {
  string phone = 1 [(gnostic.openapi.v3.property) = { description: "Phone number" }];
  string code = 2 [(gnostic.openapi.v3.property) = { description: "Verification code" }];
}
message BindEmailRequest {
  string email = 1 [(gnostic.openapi.v3.property) = { description: "Email address" }];

  optional string verification_code = 2 [
    json_name = "verificationCode",
    (gnostic.openapi.v3.property) = { description: "Email verification code (optional)" }
  ];
}


message VerifyContactRequest {
  oneof contact {
    PhoneVerification phone = 1;
    EmailVerification email = 2;
  }

  // Optional: Server-generated verification session ID (for multi-step or callback verification)
  optional string verification_id = 3 [
    json_name = "verificationId",
    (gnostic.openapi.v3.property) = { description: "Server-generated verification session ID (optional)" }
  ];
}

// Phone verification
message PhoneVerification {
  string phone = 1 [
    json_name = "phone",
    (gnostic.openapi.v3.property) = { description: "Phone number with country code" }
  ];

  string code = 2 [
    json_name = "code",
    (google.api.field_behavior) = REQUIRED,
    (gnostic.openapi.v3.property) = { description: "SMS verification code" }
  ];
}

// Email verification
message EmailVerification {
  string email = 1 [
    json_name = "email",
    (gnostic.openapi.v3.property) = { description: "Email address" }
  ];

  string code = 2 [
    json_name = "code",
    (google.api.field_behavior) = REQUIRED,
    (gnostic.openapi.v3.property) = { description: "Email verification code" }
  ];
}
